--- a/task/t/practice-1/style.css
+++ b/task/t/practice-1/style.css
@@ -7,7 +7,19 @@
 .list{
     display: flex;
 }
-.sub-list{
+.sub-list1{
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+}
+.sub-list2{
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+}
+.sub-list3{
     display: flex;
     flex: 1;
     align-items: center;
@@ -33,12 +45,6 @@ a{
     color:black;
     text-decoration: none;
 }
-/* a:active{
-    color: black;
-}
-a:visited{
-    color: #f9506f;
-} */
 a:hover{
     color: #f9506f;
 }
@@ -124,4 +130,7 @@ img{
 }
 .h1{
     padding-bottom: 33px;
+}
+.hid1{
+    display: none;
 }
